--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 2 - HTML & CSS Starter</title>
+	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+		<div id="content">
+			<h1>Hello World</h1>
 
+			<p>I'm not certain that my partner will be my partner, but if its Gage.. he is dope.</p>
 </body>
 </html>
