--- a/lab2/index.html
+++ b/lab2/index.html
@@ -10,5 +10,14 @@
 			<h1>Hello World</h1>
 
 			<p>I'm not certain that my partner will be my partner, but if its Gage.. he is dope.</p>
+
+			<p> Diamond is the extra most bestest partener ever!! </p>
+
+			<p> So, my partner is Generous Gage, yayy!! </p>
+
+			<img src="img/friends.jpeg" width=350>
+
+			<p> Diamond and I actually met our first year at a lingere party for our mutual friend's birthday! we didn't know we were going to be in this class together,
+				or let alone in the same section!! Truly a fateful pairing! < 3 </p>
 </body>
 </html>
