--- a/lab2/index.html
+++ b/lab2/index.html
@@ -19,5 +19,8 @@
 
 			<p> Diamond and I actually met our first year at a lingere party for our mutual friend's birthday! we didn't know we were going to be in this class together,
 				or let alone in the same section!! Truly a fateful pairing! < 3 </p>
+
+
+				<p> #programming is hard! we really tried to insert an image on our website but it didnt work :( </p>
 </body>
 </html>
