--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 	<main>
-		<h1>Diamond's Page</h1>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
+		<h1>Diamond's Web</h1>
+		<p>Hey! So, Im Diamond :)</p>
+		<img id="my-portrait" src="img/selfie.jpg" />
 
-		<img src="img/aligator.gif" width=350>
 
 <div id="callout">
-		<h2>This is a secondary heading</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<h2>About Me: </h2>
+		<p>I am a 3rd year student. I am studying Film and Digital Media, and Art and Design: Games and Playable Media. I also want to major in Psych if I have the time. Right now, im super excited about using creative mediums to transform our future. I want to act and direct, with the goal of portraying possible futures for society(relistic an obtainable ones.) Anywho, I also have the coolest cat, Cru! Full name: Cru Kyd Moore. (UNECESSARY EXPLANATION: ) </p>
 	</main>
 </div>
 
