--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
 
 <div id="callout">
 		<h2>About Me: </h2>
-		<p>I am a 3rd year student. I am studying Film and Digital Media, and Art and Design: Games and Playable Media. I also want to major in Psych if I have the time. Right now, im super excited about using creative mediums to transform our future. I want to act and direct, with the goal of portraying possible futures for society(relistic an obtainable ones.) Anywho, I also have the coolest cat, Cru! Full name: Cru Kyd Moore. (UNECESSARY EXPLANATION: ) </p>
+		<p>I am a 3rd year student. I am studying Film and Digital Media, and Art and Design: Games and Playable Media. I also want to major in Psych if I have the time. Right now, im super excited about using creative mediums to transform our future. I want to act and direct, with the goal of portraying possible futures for society(relistic and obtainable ones.) Anywho, I also have the coolest cat, Cru! Full name: Cru Kyd Moore. (Pics and UNECESSARY EXPLANATION: This guy was born around the same time as Cruella and he's a a tuxedo, so.. and he has crooked tail, so.. and well he is the mostest, but I named him Moore. Or he just took Mama's last name.) </p>
 	</main>
 </div>
 
+<div class= "assignments major section">
+				<h2>Labs</h2>
+				<ul>
+
+					<li><a href="lab2/index.html">Lab 2: Your first HTML </a></li>
+					<li><a href="lab3/index.html"> Lab 3: File structure </a></li>
+					<li><a href="lab4/index.html"> Lab 4: File Transfer </a></li>
+					<li><a href="lab5/index.html"> Lab 5:</a></li>
+					<li><a href="lab6/index.html"> Lab 6:</a></li>
+				</ul>
+				
 </body>
 </html>
