--- a/lab4/index.html
+++ b/lab4/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 4 - Pseudocoding and Problemsolving</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<div>
+	<h1>Challenges</h1>
+	<p>One of the biggest challenghes we had was figuring out what pseudocoding is and
+		what we were doing with this lab. We were struggling to grasp the concept of the coding part and what we were supoosed to be doing.
+		However we perservered and got it done!!!
 
+
+
+	<h2>Problems</h2>
+	<pre><code>
+	Task 1:
+	Make Popcorn
+		1. Remove popcorn package, from popcorn box.
+		2. Remove popcorn bag from popcorn packaging.
+		3. Place popcorn bag into the microwave.
+		4. Set the microwave to two and a half minutes, and press start.
+		6. When the sound between pops increases to 2 seconds per pop, or when the
+			 timer ends, the popcorn is ready.
+		7. Remove the popcorn bag from the microwave carefully, as it is hot.
+		8. Open the popcorn bag and pour your popcorn into a bowl.
+		9. It is mandatory to add butter and salt, or else your popcorn is trash.
+	</code></pre>
+
+	<pre><code>
+	Task 2:
+	Computer Task: Rock-Paper-Scissors Simulator.
+		1. Display start page.
+		2. Accept user input.
+		3. Validate user input and begin rock, paper, scissors countdown, display the word shoot.
+		4. The User and the computer will individually pick either rock, paper, or scissors.
+		4. The computer will show an image of either rock, paper, or scissors, and the user will decide
+				their own hand gesture wins or loses.
+		5. Display restart option.
+	</code></pre>
+
+	<pre><code>
+	Task 3:
+	// Rock-Paper-Scisssors.
+	// A Simple Version of Rock-Paper-Scissors.
+	// @link   URL
+	// @file   This file runs Tetris to an html web page.
+	// @author Diamond Moore, Gage Weber
+	// @since  10/19/2022
+
+
+	// // Print the board before each turn
+	// Loop through each row
+			// Loop through each space
+					// Print X, O, or Space
+					// Print a | between
+			// Print a newline at the end
+			// Print a horizontal line between
+	</code></pre>
+
+	<h1>Results</h1>
+
+		<img id="lab4javapic" src="img/lab4javapic.jpeg"/>
+
+</div>
 </body>
 </html>
