--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 5 - Data Types and Variables</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-
+		<div id = "content">
+			<img src = "img/walkingfeet.jpeg" width = 300>
+			<h1> Lab5: Data Types and Variables </h1>
+			<p> We are experimenting with JS data types and variables. </p>
+			<h2> Challenges </h2>
+			<p> Following the guide on the document was helpful. I have previous experience with cse20 and I am familiar with data types and variables. I had trouble linking the js, but with the help of my partner, we were able to figure  it out. This assignment had mimimal challenges, outside of time constraints; lots to do in a single week and not enough time. </p>
+			<h2> Results </h2>
+			<p> We are successful in completing the assignment!</p>
+			<div>
+				<h2> Script Output </h2>
+				<div class=output>
+        <script type="text/javascript" src="js/lab.js"> </script>
+			</div>
+				</div>
+			</div>
+		</div>
+</body>
+		</div>
 </body>
 </html>
