--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 3 - File Structures</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+
+	<h1>Lab 3 File Structures </h1>
+
+	<p> The idea of this lab was to further create a local file structure on my
+		computer and add index.html files. </p>
+
+	<h2> Challenges </h2>
+
+	<p> I was okay creating the file stucture. I had to miss a couple days due to illness, but Im back. This class ismoving kind of fast/there is quite a bit to do now. I hope staying on track is easier moving forward. </p>
+
+	<h3> Results </h3>
+
+  	<p> Task 1: Here's a screenshot of our file structure in atom </p>
+
+	<img id="file-structure" src="img/file-structure.jpeg" />
+
+    <p> Task 2: HTML source code and screenshot of the site in browser </p>
+
+	<img id="html-source" src="img/html-source.jpeg" />
+
+		<p> Task 3: Take a screenshot of your html source code in Atom and a screenshot of
+			art101/la b3/index.html as it appears in your browser. </p>
+
+	<img id="lab3-html"	src="img/lab3-html.jpeg" />
+
+
+
+
+
 
 </body>
 </html>
